<resources>
    <string name="app_name">ShareFood</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="enter_description">Enter description</string>
    <string name="image">imgButton</string>
    <string name="post_description">Post Description</string>
    <string name="post_title">Post Title</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="mediaImg">mediaImg</string>
    <string name="username">Username</string>
    <string name="delete_image">Delete Image</string>
    <string name="todo">TODO</string>
    <string name="edit_profile_or">Edit profile or</string>
    <string name="not_now">Not now</string>
    <string name="done">Done</string>
    <string name="enter_username">Enter username</string>
    <string name="_13_03_2018">13/03/2018</string>
    <string name="this_post_added_by_you">This post added at</string>
    <string name="your_name_apear_in_the_home_page">Your name apear in the home page</string>
    <string name="edit_description">Edit description</string>
    <string name="edit_title">Edit title</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="imagesinkle">Imagesinkle</string>
    <string name="remember_me">Remember me</string>
    <string name="signwithgoogle">TODO</string>
    <string name="signwithfacebook">TODO</string>
    <string name="facebook_app_id">421721428258199</string>
    <string name="fb_login_protocol_scheme">fb421721428258199</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_user">New user</string>
    <string name="view_22">View 22</string>

</resources>
