<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.drmas.issam.socialmedia.LoginActivity">

    <EditText
        android:layout_marginBottom="10dp"
        android:background="@drawable/editshape"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="14dp"
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:layout_marginBottom="10dp"
        android:background="@drawable/editshape"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="14dp"
        android:id="@+id/loginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/savelogincheckbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/editshape"
        android:text="@string/remember_me"
        android:textColor="@color/com_facebook_button_background_color_focused_disabled"
        android:textSize="18sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:onClick="loginButtonClicked"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textFromHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="ForgotPassword"
            android:text="@string/reset"
            android:textColor="#70a1ff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textColor="#FFF"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="RegisterColickedActivity"
            android:text="@string/register"
            android:textColor="#70a1ff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <ImageButton
            android:id="@+id/buttonSignGoogle"
            android:layout_width="188dp"
            android:layout_height="33dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_google"
            android:contentDescription="@string/signwithfacebook" />
    </LinearLayout>


    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/mediaImg"
        android:src="@drawable/image_login_food" />

</LinearLayout>
