<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context="com.drmas.issam.socialmedia.PostActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:onClick="imageButtonClicked"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/view"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/image"
        android:layout_marginStart="40dp"/>

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:id="@+id/editTextTitle"
        android:background="@drawable/editshape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"/>

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:id="@+id/editTextDesc"
        android:background="@drawable/editshape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_description"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_style"
        android:onClick="submitButtonClicked"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="24sp" />

</LinearLayout>
