<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:orientation="vertical"
        android:transitionGroup="false"
        tools:targetApi="lollipop">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ImgViewProfile"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/icon_img_user_home"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/_13_03_2018" />

            <ImageView
                android:id="@+id/ImgAllView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/icon_goto_single_activity"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_marginLeft="5dp"
                android:id="@+id/textCounterVistit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/view_22"
                android:layout_marginStart="5dp" />
        </LinearLayout>


        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/post_title"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:text="@string/post_description"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

    </LinearLayout>


</android.support.v7.widget.CardView>

