<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:background="@color/colorBackroundSingle"
    tools:context="com.drmas.issam.socialmedia.SingleActivity">

    <LinearLayout
        android:paddingBottom="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/singleAddBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/singleTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#000" />
    </LinearLayout>

    <ImageView
        android:id="@+id/singleImageView"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imagesinkle" />

    <TextView
        android:id="@+id/singleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorTextTitle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/singleDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorTextdesc"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/editshape"
        android:gravity="center_vertical|center_horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_like"
            android:contentDescription="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginStart="5dp"
            android:text="@string/like" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_comment"
            android:contentDescription="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/comment" />
    </LinearLayout>

    <Button
        android:id="@+id/singleDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:onClick="deleteButtonClick"
        android:text="@string/delete_image"
        android:textAllCaps="false"
        android:textSize="18sp" />



</LinearLayout>